--- a/xmobar/.xmobarrc
+++ b/xmobar/.xmobarrc
@@ -3,10 +3,10 @@ Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
        , fgColor = "grey"
        , position = Top
        , lowerOnStart = True
-       , commands = [ Run Network "eth0" ["-L","0","-H","32","-n","green","-h","red"] 10
-                    , Run Cpu ["-L","3","-H","50","-n","green","-h","red"] 10
+       , commands = [ Run Network "wlan0" ["-L","0","-H","32","-n","green","-h","red"] 10
+                    , Run Cpu ["-L","3 ","-H","50","-n","green","-h","red"] 10
                     , Run CpuFreq ["-t","<cpu0>"] 10
-                    , Run Battery ["-t","<left>% / <timeleft>","-L","50","-H","75","-h","green","-n","yell","-l","red"] 10
+                    , Run Battery ["-t","<left>% = <timeleft>","-L","50","-H","75","-h","green","-n","yell","-l","red"] 10
                     , Run ThermalZone 0 ["-t","<temp> C","-L","40","-H","79","-h","red","-n","yellow","-l","green"] 10
                     , Run Memory ["-t","<usedratio>%"] 10
                     , Run Swap ["-t","<usedratio>%"] 10
@@ -15,5 +15,5 @@ Config { font = "-misc-fixed-*-*-*-*-10-*-*-*-*-*-*-*"
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %cpu% / %cpufreq% | M %memory% * S %swap% | %eth0% | %battery% ; %thermal0% | <fc=#ee9a00>%date%</fc>"
+       , template = "%StdinReader% }{ %cpu% @ %cpufreq% | Memory: %memory% * Swap: %swap% | %wlan0% | %battery% | %thermal0% | <fc=#dd3377>%date%</fc>"
        }
