--- a/rtorrent/.rtorrent.rc
+++ b/rtorrent/.rtorrent.rc
@@ -3,13 +3,13 @@ download_rate = 0
 upload_rate = 40
 
 # Default directory to save the downloaded torrents.
-directory = /home/joshua/Downloads/torrents
+directory = ~/Downloads/torrents
 
 # Default session directory. When restarting rtorrent, the torrents from this directory will be restarted.
-session = /home/joshua/Downloads/torrents
+session = ~/Downloads/torrents
 
 # A watch directory downloading to the default location
-schedule = watch_directory_3,5,300,load_start=/home/joshua/Downloads/torrents/watch/*.torrent
+schedule = watch_directory_3,5,300,load_start=~/Downloads/torrents/watch/*.torrent
 
 # Watch directories with customized download directories
 #schedule = watch_directory_1,5,60,"load_start=/home/user/media/watch_series/*.torrent,d.set_directory=/home/user/media/series"
