--- a/ansible/roles/packages/tasks/main.yaml
+++ b/ansible/roles/packages/tasks/main.yaml
@@ -1,11 +1,5 @@
 ---
-- name: upgrade packages
-  become: yes
-  pacman:
-    update_cache: yes
-    upgrade: yes
-
 - name: install packages
   aur:
     name: "{{ packages }}"
-    state: present
+    state: latest
