--- a/ansible/roles/stow/tasks/main.yaml
+++ b/ansible/roles/stow/tasks/main.yaml
@@ -1,6 +1,12 @@
+---
+- name: install stow
+  pacman:
+    name: stow
+
 - name: clone dotfiles for stow
   become: yes
   become_user: "{{ username }}"
   git:
     dest: '$HOME/.dotfiles'
     repo: "{{ dotfile_repo }}"
+    force: yes
