--- a/stow/sway/sway/config
+++ b/stow/sway/sway/config
@@ -4,7 +4,7 @@ input * {
     xkb_options "grp:alt_space_toggle"
 }
 
-# input <identifier> xkb_model "chromebook"
+input <identifier> xkb_model "chromebook"
 
 set $mod Mod4
 
@@ -12,28 +12,19 @@ set $mod Mod4
 # is used in the bar {} block below.
 font pango:terminus 10px
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
-
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Shift+Return exec termite
+bindsym $mod+Shift+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+c kill
 
-# start dmenu (a program launcher)
-bindsym $mod+p exec dmenu_run
+# program launcher menu
+# https://luxagraf.net/src/guide-to-switching-i3-to-sway
+bindsym $mod+p exec alacritty --class 'launcher' --command bash -c 'compgen -c | sort -u | fzf | xargs -r swaymsg -t command exec'
+for_window [app_id="^launcher$"] floating enable, border none, resize set width 25 ppt height 20 ppt, move position 0 px 0 px
 
 # change focus
 bindsym $mod+Tab focus left
