--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -146,9 +146,13 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# Note: workspace_swipe option removed in Hyprland 0.51+
+# Old syntax (0.49 and earlier):
+# gestures {
+#     workspace_swipe = false
+# }
+# New syntax (0.51+): Uncomment to enable 3-finger horizontal workspace switching
+# gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
