--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -13,7 +13,7 @@ $lock = hyprlock
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = waybar &
+# exec-once = waybar &
 exec-once = pasystray &
 exec-once = blueman-applet &
 exec-once = nm-applet &
